# bits-of-python

./: README.md  main.py  pyproject.toml
01-c-functions/: README.md
01-c-functions/dotproduct/: vector.py
01-c-functions/dotproduct/tests/: test_c.py
02-building-a-linter/src/: main.py
02-building-a-linter/src/studentsystem/: student.py
c-functions/dotproduct/: benchmark.py  benchmark_results.txt  vector.py
c-functions/dotproduct/functions/: dot.c
c-functions/dotproduct/tests/: test_c.py  test_non_c.py
