[project]
name = "arains-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
01-c-functions = [
    "numpy>=2.3.4",
    "psutil>=7.1.3",
]
02-building-a-linter = [
    "faker>=37.12.0",
]
